Working Prototype of Game DinoJump Now With: Fancy Graphics Fancy Scorecard Updated Hitbox detection Removed Old Code Added New Animation system for cactus and allowed for more customisable release settings, Fixed position of cactus to floor

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     width: 20px;
     height: 40px;
     position: absolute;
-    top: 110px;
+    top: 210px;
     left: 480px;
     background-image: url("Assets/Images/cactusBig0000.png");
     background-size: contain;
